err/svnchecker.err
Listing '.'...
Listing './bin'...
Listing './config'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/checks'...
Compiling './lib/python3.5/site-packages/checks/Checkout.py'...
***   File "./lib/python3.5/site-packages/checks/Checkout.py", line 35
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checks/Checkstyle.py'...
***   File "./lib/python3.5/site-packages/checks/Checkstyle.py", line 35
    except Process.ProcessException, e:
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checks/XMLValidator.py'...
***   File "./lib/python3.5/site-packages/checks/XMLValidator.py", line 31
    except expat.ExpatError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/handlers'...
Listing './lib/python3.5/site-packages/modules'...
Compiling './lib/python3.5/site-packages/modules/Config.py'...
***   File "./lib/python3.5/site-packages/modules/Config.py", line 117
    except NoSuchConfigurationValueError, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
